--- a/app/views/manage/appeals/v3/appeal-details.html
+++ b/app/views/manage/appeals/v3/appeal-details.html
@@ -1,4 +1,4 @@
-{% extends '_layouts/layout-main.html' %}
+{% extends '_layouts/layout-pins.html' %}
 
 {% set title = "Appeal "+data['appealCode'] %}
 
@@ -7,15 +7,9 @@
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: {
-      text: "Beta"
-    },
-    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-  }) }}
 
   {{ govukBackLink({
-    text: "Back to planning appeals",
+    text: "Back to appeals",
     href: "/manage/appeals/v3/?action="
   }) }}
 {% endblock %}
