--- a/app/views/manage/questionnaire/v12/task-list.html
+++ b/app/views/manage/questionnaire/v12/task-list.html
@@ -13,55 +13,17 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full govuk-!-margin-bottom-3">
+
+      <span class="govuk-caption-l">Appeal 0123456</span>
       <h1 class="govuk-heading-l">
         {{ title }}
       </h1>
 
-      {# Tweak the summary list to be smaller #}
+    </div>
 
-      <style>
-        .appeal-details .govuk-summary-list__key,
-        .appeal-details .govuk-summary-list__value,
-        .appeal-details .govuk-summary-list__actions {
-          padding-top: 0;
-          padding-bottom: 0;
-        }
-        /* Give some space for the tag being inline now */
-        .app-task-list__section {
-          padding-right: 140px
-        }
-      </style>
-
-      {{ govukSummaryList({
-        classes: 'appeal-details govuk-summary-list--no-border',
-        rows: [
-          {
-            key: {
-              text: 'Appeal reference'
-            },
-            value: {
-              text: 'APP/Q9999/D/21/1345264'
-            }
-          },
-          {
-            key: {
-              text: 'Planning application number'
-            },
-            value: {
-              text: '21/05058/FUL'
-            }
-          },
-          {
-            key: {
-              text: 'Deadline'
-            },
-            value: {
-              text: '6' | daysInFuture
-            }
-          }
-        ]
-      }) }}
-
+    <div class="govuk-grid-column-full">
+      {% include "_includes/appeal-content/lpa-full-appeal-meta.html" %}
+      
     </div>
 
     <div class="govuk-grid-column-three-quarters-from-desktop">
