--- a/app/views/appeal/lbc/v2/about-the-appeal/new-plans-check.html
+++ b/app/views/appeal/lbc/v2/about-the-appeal/new-plans-check.html
@@ -3,6 +3,9 @@
 {% set title = 'Do you have any new plans or drawings that support your appeal?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the appeal
+  </span>
   {{ govukRadios({
     idPrefix: 'new-plans-check',
     name: 'new-plans-check',
