--- a/app/views/appeal/lbc/v2/about-the-appeal/procedure--length.html
+++ b/app/views/appeal/lbc/v2/about-the-appeal/procedure--length.html
@@ -3,6 +3,9 @@
 {% set title = 'How many days would you expect the inquiry to last?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the appeal
+  </span>
   {{ govukInput({
     id: 'procedure-lenth',
     name: 'procedure-lenth',
