--- a/app/views/appeal/lbc/v2/about-the-appeal/statement.html
+++ b/app/views/appeal/lbc/v2/about-the-appeal/statement.html
@@ -5,7 +5,9 @@
 {% set back = true %}
 
 {% block questions %}
-
+  <span class="govuk-caption-l">
+    Tell us about the appeal
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
