--- a/app/views/appeal/lbc/v2/about-the-site/address.html
+++ b/app/views/appeal/lbc/v2/about-the-site/address.html
@@ -3,6 +3,11 @@
 {% set title = 'What&rsquo;s the address of the appeal site?' %}
 
 {% block questions %}
+
+  <span class="govuk-caption-l">
+    Tell us about the site
+  </span>
+
   {% call govukFieldset({
     legend: {
       html: title,
