--- a/app/views/appeal/lbc/v2/about-the-site/agricultural-holding.html
+++ b/app/views/appeal/lbc/v2/about-the-site/agricultural-holding.html
@@ -3,6 +3,10 @@
 {% set title = 'Is the appeal site part of an agricultural holding?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the site
+  </span>
+  
   {{ govukRadios({
     idPrefix: 'agricultural-holding',
     name: 'agricultural-holding',
