--- a/app/views/appeal/lbc/v2/about-the-site/agricultural-others.html
+++ b/app/views/appeal/lbc/v2/about-the-site/agricultural-others.html
@@ -3,6 +3,9 @@
 {% set title = 'Are there any other tenants?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the site
+  </span>
   {{ govukRadios({
     idPrefix: 'agricultural-others',
     name: 'agricultural-others',
