--- a/app/views/appeal/lbc/v2/about-the-site/health-and-safety.html
+++ b/app/views/appeal/lbc/v2/about-the-site/health-and-safety.html
@@ -3,7 +3,9 @@
 {% set title = 'Health and safety issues' %}
 
 {% block questions %}
-
+  <span class="govuk-caption-l">
+    Tell us about the site
+  </span>
   {% set textareaHTML %}
     {{ govukTextarea({
       name: 'health-and-safety__details',
