--- a/app/views/appeal/lbc/v2/about-the-site/own-others.html
+++ b/app/views/appeal/lbc/v2/about-the-site/own-others.html
@@ -3,6 +3,9 @@
 {% set title = 'Do you know who owns the rest of the land involved in the appeal?' if data['own-some'] == 'Yes' else 'Do you know who owns the land involved in the appeal?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the site
+  </span>
   {{ govukRadios({
     idPrefix: 'own-others',
     name: 'own-others',
