--- a/app/views/appeal/lbc/v2/about-the-site/own-some.html
+++ b/app/views/appeal/lbc/v2/about-the-site/own-some.html
@@ -3,6 +3,9 @@
 {% set title = 'Do you own some of the land involved in the appeal?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the site
+  </span>
   {{ govukRadios({
     idPrefix: 'own-some',
     name: 'own-some',
