--- a/app/views/appeal/lbc/v2/about-you/appellant-check.html
+++ b/app/views/appeal/lbc/v2/about-you/appellant-check.html
@@ -4,6 +4,9 @@
 
 {% block questions %}
 
+  <span class="govuk-caption-l">
+    Tell us about you
+  </span>
   {{ govukRadios({
     idPrefix: 'appellant-check',
     name: 'appellant-check',
