--- a/app/views/appeal/lbc/v2/about-you/appellant-name.html
+++ b/app/views/appeal/lbc/v2/about-you/appellant-name.html
@@ -3,6 +3,9 @@
 {% set title = 'What&rsquo;s the appellant&rsquo;s name?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about you
+  </span>
   {% call govukFieldset({
     legend: {
     html: title,
