--- a/app/views/appeal/lbc/v2/about-you/contact-details.html
+++ b/app/views/appeal/lbc/v2/about-you/contact-details.html
@@ -3,6 +3,10 @@
 {% set title = 'What&rsquo;s your name?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about you
+  </span>
+
   {% call govukFieldset({
     legend: {
     html: title,
