--- a/app/views/appeal/lbc/v2/about-second-application/decision-letter.html
+++ b/app/views/appeal/lbc/v2/about-second-application/decision-letter.html
@@ -3,6 +3,9 @@
 {% set title = 'Upload the decision letter from the local planning authority' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the application
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
