--- a/app/views/appeal/lbc/v2/about-the-appeal/appeal-statement.html
+++ b/app/views/appeal/lbc/v2/about-the-appeal/appeal-statement.html
@@ -3,6 +3,9 @@
 {% set title = 'Upload your appeal statement' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the appeal
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
