--- a/app/views/appeal/lbc/v2/about-the-appeal/planning-obligation.html
+++ b/app/views/appeal/lbc/v2/about-the-appeal/planning-obligation.html
@@ -3,6 +3,9 @@
 {% set title = 'Upload your draft planning obligation' if data['planning-obligation-status'] == 'In draft' else 'Upload your planning obligation' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the appeal
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
