--- a/app/views/appeal/lbc/v2/about-the-appeal/procedure--reason.html
+++ b/app/views/appeal/lbc/v2/about-the-appeal/procedure--reason.html
@@ -3,6 +3,9 @@
 {% set title = 'Why would you prefer a '+ (data['procedure'] | lower or 'inquiry') +'?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the appeal
+  </span>
   {{ govukTextarea({
     name: 'procedure-reason',
     id: 'procedure-reason',
