--- a/app/views/appeal/lbc/v2/about-the-appeal/procedure--witnesses.html
+++ b/app/views/appeal/lbc/v2/about-the-appeal/procedure--witnesses.html
@@ -3,6 +3,9 @@
 {% set title = 'How many witnesses would you expect to give evidence at the inquiry?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the appeal
+  </span>
   {{ govukInput({
     id: 'procedure-witnesses',
     name: 'procedure-witnesses',
