--- a/app/views/appeal/lbc/v2/about-the-application/application-reference.html
+++ b/app/views/appeal/lbc/v2/about-the-application/application-reference.html
@@ -3,6 +3,9 @@
 {% set title = 'What&rsquo;s the reference number for the application?' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the application
+  </span>
   {{ govukInput({
     id: 'lpa-reference',
     name: 'lpa-reference',
