--- a/app/views/appeal/lbc/v2/about-the-application/ownership-certificate-check.html
+++ b/app/views/appeal/lbc/v2/about-the-application/ownership-certificate-check.html
@@ -3,6 +3,9 @@
 {% set title = 'Separate ownership certificate and agricultural land declaration' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the application
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
