--- a/app/views/appeal/lbc/v2/about-the-site/agricultural-notified.html
+++ b/app/views/appeal/lbc/v2/about-the-site/agricultural-notified.html
@@ -3,6 +3,9 @@
 {% set title = 'Telling the tenants' %}
 
 {% block questions %}
+  <span class="govuk-caption-l">
+    Tell us about the site
+  </span>
   <h1 class="govuk-heading-l">
     {{ title }}
   </h1>
