Updates for Save and return, returning to an appeal route

--- a/app/views/appeal/save-and-return/v6/email--code.html
+++ b/app/views/appeal/save-and-return/v6/email--code.html
@@ -4,6 +4,8 @@
   Your security code
 {% endblock %}
 
+{% set prototypeLinks = [{href: 'enter-code', text: 'Enter the code'}] %}
+
 {% block emailHeader %}
   <h1 class="govuk-heading-m">
     Your security code
