--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,5 +1,6 @@
 {% extends '_layouts/layout-pins.html' %}
 
+{% set beta = false %}
 {% set back = false %}
 {% set nav = false %}
 {% set title = 'Appeal service prototypes' %}
