Content updates for Save and return for second device + before you continue for LBC - link to task list needs fix

--- a/app/views/appeal/lbc/index.html
+++ b/app/views/appeal/lbc/index.html
@@ -36,6 +36,9 @@
 
     <ul class="govuk-list govuk-list--bullet">
       <li>
+        re-added ‘Before you continue’
+      </li>
+      <li>
         the task list is closer to the GDS pattern (grouped questions)
       </li>
     </ul>
