--- a/app/views/appeal/save-and-return/v6/before-you-start.html
+++ b/app/views/appeal/save-and-return/v6/before-you-start.html
@@ -8,5 +8,7 @@
   </h1>
   <p class="govuk-body">This is a new service. Before you start, we&rsquo;ll check if you can use this service by asking some questions about your appeal.</p>
 
-  <p class="govuk-body">If you cannot use this service, you can still appeal using the existing service.</p>
+  <p class="govuk-body">
+    If you cannot use this service, we will direct you to our existing service.
+  </p>
 {% endblock %}
