Save and return content updates

--- a/app/views/appeal/save-and-return/v6/appellant-email.html
+++ b/app/views/appeal/save-and-return/v6/appellant-email.html
@@ -28,7 +28,7 @@
 
     <p>
       Go to the link to confirm your email address:<br>
-      <a href="email-confirmed" class="govuk-link">http://www.gov.uk/appeal-a-planning-decision/confirm-email</a>
+      <a href="email-confirmed" target="_blank" class="govuk-link">http://www.gov.uk/appeal-a-planning-decision/confirm-email</a>
     </p>
 
     <p>
