--- a/app/views/appeal/save-and-return/v6/appellant-email--phone.html
+++ b/app/views/appeal/save-and-return/v6/appellant-email--phone.html
@@ -26,7 +26,7 @@
 
     <p>
       Go to the link to confirm your email address:<br>
-      <a href="email-confirmed--phone" class="govuk-link">http://www.gov.uk/appeal-a-planning-decision/confirm-email</a>
+      <a href="email-confirmed--phone" target="_blank" class="govuk-link">http://www.gov.uk/appeal-a-planning-decision/confirm-email</a>
     </p>
 
     <p>
